--- a/rss-feed-component.css
+++ b/rss-feed-component.css
@@ -25,15 +25,18 @@ body {
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	gap: 20px;
+	margin: 0;
 	order: -1;
 }
 .event-card {
 	position: relative;
 	box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 	transition: box-shadow 300ms ease-in-out, transform 300ms ease-in-out;
-	animation: fadeIn 0.5s linear both;
+	min-height: 470px;
 }
 .event-card a {
+	display: block;
+	height: 100%;
 	text-decoration: none;
 	color: inherit;
 }
@@ -97,7 +100,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 20px;
+	gap: 15px;
+	padding: 20px 0;
 }
 .pagination-item {
 	font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif !important;
@@ -121,9 +125,8 @@ body {
 	color: #fff !important;
 }
 .rss-feed-last-updated {
-	margin: 20px 0;
 	text-align: center;
-	padding-top: 10px;
+	padding: 20px 0;
 	font-style: italic;
 	border-top: 1px solid #e1e1e1;
 }
@@ -139,6 +142,7 @@ body {
 	.result-pagination-info {
 		flex-direction: row;
 		justify-content: space-between;
+		align-items: center;
 	}
 	.rss-feed-last-updated {
 		text-align: right;
@@ -147,13 +151,5 @@ body {
 @media screen and (min-width: 1150px) {
 	.events-list {
 		grid-template-columns: repeat(3, 1fr);
-	}
-}
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
 	}
 }
