--- a/rss-feed-component.css
+++ b/rss-feed-component.css
@@ -18,6 +18,7 @@ body {
 	font-size: 14px !important;
 	line-height: 24px !important;
 	margin: 0;
+	padding: 0;
 }
 .events-list {
 	list-style-type: none;
@@ -70,7 +71,7 @@ body {
 	background: #fff;
 	border-bottom-left-radius: 8px;
 	border-bottom-right-radius: 8px;
-	padding: 1rem 1.5rem;
+	padding: 1rem 1.5rem !important;
 	box-shadow: 0 1px 2px 0;
 	z-index: 1;
 }
@@ -103,6 +104,10 @@ body {
 	gap: 15px;
 	padding: 20px 0;
 }
+.pagination-list {
+	display: flex;
+	gap: 5px;
+}
 .pagination-item {
 	font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif !important;
 	font-size: 14px !important;
@@ -126,9 +131,18 @@ body {
 }
 .rss-feed-last-updated {
 	text-align: center;
-	padding: 20px 0;
+	padding: 20px 0 !important;
 	font-style: italic;
 	border-top: 1px solid #e1e1e1;
+}
+.anchor_underline {
+	color: #006030;
+	text-decoration: underline;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 2px;
+}
+.anchor_underline:hover {
+	text-decoration: none;
 }
 @media screen and (min-width: 650px) {
 	.rss-feed-section p,
